--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "ag-grid-community": "^24.0.0",
     "ag-grid-react": "^24.0.0",
+    "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
